fix reloading on hero stuck and other fixes

--- a/extension/content-scripts/content.css
+++ b/extension/content-scripts/content.css
@@ -76,6 +76,3 @@
 .off-pointer-events{
     pointer-events: none;
 }
-
-.minimap-opacity-slider{
-}
